@@ -76,6 +76,7 @@ production.
   syntax.
 * The default user signature now contains a talk link in addition to the user link.
 * (bug 25306) Add link of old page title to MediaWiki:Delete_and_move_reason
+* Added hook BitmapHandlerCheckImageArea
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
